[package]
name = "kms_decryption_utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "22.2.0"
time = "0.3.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"
aws-config = "0.47.0"
aws-sdk-kms = "0.17.0"
base64 = "0.13.0"
aes = "0.8.1"
cbc = { version = "0.1.2", features = ["block-padding", "default", "std"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tracing = "0.1.36"
#tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
tracing-subscriber = "0.3.15"
clap = { version = "3.2.17", features = ["derive"] }
